[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/CardEdit.gd" type="Script" id=1]

[node name="CardEdit" type="ColorRect"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/minimum_spaces = 6
align = 1
max_length = 3
context_menu_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false

[connection signal="gui_input" from="Label" to="." method="_on_Label_gui_input"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
